# offsetsurfacemesh

./: CMakeLists.txt  README.md  kdprocessor.cpp  kdtree.c  main.cpp
include/: kdprocessor..h
